Added `export jlink` (#1593)
* chore: removed unneeded `info modulepath`

And any code creating module paths because a list with only modules is
either the same as the list of dependencies (class path) or it would
contain only "real" modules which is a useless distinction.

* refactor: minor rollback of changes to `resolveInJavaHome()`

Earlier changes were moving in the direction of passing a `Jdk` object
instead of a version string. But that is actually not future save,
where there might be a point where we would want to be able to say:
"okay, I've used 'javac' from Jdk X to compile this and now I need
'native-image', but it's not in this Jdk X. Is there perhaps a newer
Jdk I could use?". If we pass a `Jdk` object we would be stuck at the
current version.

* chore: minor change in running `jar`

Now using the generic `Util.runCommand()`

* fix: fixed issue with module name handling

Setting the module name to an empty string on the command line would not
result in the expected behavior (turn the script into a module with a
name generated from the script name)

* fix: fixed info classpath implementation

* chore: make `ModuleUtil.isModule()` slightly smarter

The method will now also look for an alternative location for the
`module-info.class` file. This should still be improved though.

* chore: minor text change

* fix: `CmdGeneratorBuilder` now has its own `moduleName`

This is similar to `mainClass` which also exists both in the `Project`
and in the `CmdGenerator`. And for the same reason: we want to be able
to use a different value at runtime than that at buid time.
But unlike `mainClass` the value for `moduleName` is not always copied
as the default value from `Project` to `CmdGenerator`; we don't always
want to run JARs as modules by default, for example, but instead we'd
like the user to state their intentions explicitely by passing
`--module` to the `run` command.

* feat: added `info jar` and some other option